# comps_model

./: .gitignore  LICENSE  README.md  comps.py  model.logo
rust/: Cargo.toml  README.md
rust/src/: agents.rs  main.rs  model.rs  utils.rs
