[package]
name = "comps_model"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of hierarchical information aggregation model"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.4", features = ["derive"] }
statrs = "0.16"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
indoc = "2.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
